<resources>
    <string name="app_name">Ma réu</string>
    <string name="delete_button">Delete button for meetings list</string>

    <!--Filters names-->
    <string name="filter_title">Tout les réunions</string>
    <string name="filter_by_day">Dans une journée</string>
    <string name="filter_by_hall">Dans une salle</string>
    <!--Filters halls-->
    <string name="h1">Salle A</string>
    <string name="h2">Salle B</string>
    <string name="h3">Salle C</string>
    <string name="h4">Salle D</string>
    <string name="h5">Salle E</string>
    <string name="h6">Salle F</string>
    <string name="h7">Salle G</string>
    <string name="h8">Salle H</string>
    <string name="h9">Salle I</string>
    <string name="h10">Salle J</string>

    <!--Full-Screen Dialog add new meeting-->
    <string name="meeting_card_title">Planifier la réunion</string>
    <string name="meeting_title">Sujet</string>
    <string name="meeting_hint_title">Sujet de la réunion</string>
    <string name="meeting_date">Date</string>
    <string name="meeting_hint_date">14/04/2020</string>
    <string name="meeting_hour">L\'heur</string>
    <string name="meeting_hour_from">De</string>
    <string name="meeting_hint_hour_from">9h30</string>
    <string name="meeting_hour_to">A</string>
    <string name="meeting_hint_hour_to">10h30</string>
    <string name="meeting_hall">Salle</string>
    <string name="meeting_participants">Participants</string>
    <string name="meeting_hint_participants">ils:participent@ma:réunion</string>
    <string name="meeting_participants_test1">
        Participants\nParticipants\nParticipants\nParticipants\nParticipants\nParticipants\nParticipants\nParticipants\nParticipants
        \nParticipants\nParticipants\nParticipants\nParticipants\nParticipants\nParticipants\nParticipants\nParticipants\nParticipants
    </string>
    <string name="meeting_participants_test2">Participants@Participants Particip@ants Parti@cipan:ts Participants@Participants Participants:Participants@Participants Participants@com:fr</string>

    <!-- List of hours for Spinner hour picker -->
    <string-array name="hours">
        <item>08:00</item>
        <item>08:15</item>
        <item>08:30</item>
        <item>08:45</item>
        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
        <item>20:15</item>
        <item>20:30</item>
        <item>20:45</item>
        <item>21:00</item>
        <item>21:15</item>
        <item>21:30</item>
        <item>21:45</item>
        <item>22:00</item>
    </string-array>
</resources>
