<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/meeting_add_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_close_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="15dp"
                android:layout_toStartOf="@+id/meeting_add_create_btn"
                android:layout_toEndOf="@id/meeting_add_cancel_btn"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="21sp" />

            <ImageButton
                android:id="@+id/meeting_add_create_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/ic_check_white_24dp"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_L"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/meeting_card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/meeting_card_title"
                    android:textColor="@color/carbonGray"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/meeting_card_title" />

                <EditText
                    android:id="@+id/meeting_add_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="nothing"
                    android:hint="@string/meeting_title"
                    android:inputType="text"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_date_hour_hall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meeting_add_title">

                    <TextView
                        android:id="@+id/text_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meeting_date"
                        android:textColor="@color/carbonGray"
                        app:layout_constraintBottom_toTopOf="@+id/meeting_add_date"
                        app:layout_constraintStart_toStartOf="@+id/meeting_add_date"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/meeting_add_date"
                        style="@style/Widget.AppCompat.Spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/meeting_hint_date"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_date" />

                    <TextView
                        android:id="@+id/text_hour_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/meeting_hour_from"
                        android:textColor="@color/carbonGray"
                        app:layout_constraintBottom_toTopOf="@+id/meeting_add_hour_start"
                        app:layout_constraintStart_toStartOf="@+id/meeting_add_hour_start"
                        app:layout_constraintTop_toBottomOf="@+id/meeting_add_date" />

                    <EditText
                        android:id="@+id/meeting_add_hour_start"
                        style="@style/Widget.AppCompat.Spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/meeting_hint_hour_from"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/meeting_add_hour_end"
                        app:layout_constraintStart_toStartOf="parent" />


                    <TextView
                        android:id="@+id/text_hour_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/meeting_hour_to"
                        android:textColor="@color/carbonGray"
                        app:layout_constraintBottom_toTopOf="@+id/meeting_add_hour_end"
                        app:layout_constraintStart_toStartOf="@+id/meeting_add_hour_end"
                        app:layout_constraintTop_toBottomOf="@+id/meeting_add_date" />

                    <EditText
                        android:id="@+id/meeting_add_hour_end"
                        style="@style/Widget.AppCompat.Spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:hint="@string/meeting_hint_hour_to"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/meeting_add_hour_start"
                        app:layout_constraintStart_toEndOf="@+id/meeting_add_hour_start" />


                    <TextView
                        android:id="@+id/text_hall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/meeting_hall"
                        android:textColor="@color/carbonGray"
                        app:layout_constraintStart_toStartOf="@+id/meeting_add_hall"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/meeting_add_hall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/meeting_add_participants"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:hint="@string/meeting_participants"
                    android:textSize="16sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toStartOf="@+id/meeting_participants_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_date_hour_hall" />

                <ImageButton
                    android:id="@+id/meeting_participants_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/white"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_group_add_black_36dp"
                    app:layout_constraintBottom_toBottomOf="@+id/meeting_add_participants"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/meeting_add_participants" />

                <LinearLayout
                    android:id="@+id/meeting_participants_L"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meeting_add_participants">

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:paddingStart="8dp">

                        <TextView
                            android:id="@+id/editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|top"
                            android:text="@string/meeting_participants_test1" />
                    </androidx.core.widget.NestedScrollView>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
